Updating _data/buildingblocks.yaml via Laneworks CMS Publish

--- a/_data/buildingblocks.yaml
+++ b/_data/buildingblocks.yaml
@@ -265,8 +265,28 @@
     links: []
     tools: []
     questions: []
-- category_name: Web
+- category_name: Other
   building_blocks:
+  - building_block_id: NhVVXDGYMgaBehEDwoZ5AIIoHVegkEhInE7VB6JJ3Xk117
+    building_block_category_id: FbyPQ6njSBh6nHZqtwoW4ke2GLZ5DPMkrv7SSOc1GJw117
+    name: Real Time
+    about: Providing a way to deploy APIs that are real time, either directly from
+      sources, or on top of existing APIs.
+    category_id: "317"
+    category: Other
+    category_about: Using content and data that is already on the web for deploying
+      APIs, something that usually involves scraping or harvesting of content and
+      data, then normalization before an API is deployed.
+    category_image: ~
+    category_hex: ~
+    image: ""
+    image_width: "100"
+    sort_order: "0"
+    organizations: []
+    apis: []
+    links: []
+    tools: []
+    questions: []
   - building_block_id: RO9BwSVbdY7VjndbNbYkC0WzW82eQKSgwX6MSpn5upE117
     building_block_category_id: FbyPQ6njSBh6nHZqtwoW4ke2GLZ5DPMkrv7SSOc1GJw117
     name: Scraping
@@ -274,7 +294,7 @@
       source, when an existing data source is unavailable, and then publishing as
       an API.
     category_id: "317"
-    category: Web
+    category: Other
     category_about: Using content and data that is already on the web for deploying
       APIs, something that usually involves scraping or harvesting of content and
       data, then normalization before an API is deployed.
