--- a/_data/api-commons/apache-knox/apis.yaml
+++ b/_data/api-commons/apache-knox/apis.yaml
@@ -6,10 +6,11 @@ description: The Apache Knox Gateway is a REST API Gateway for interacting with 
   administrative and analytical needs of the enterprise.
 image: http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/apache-knox-logo.gif
 tags:
+- Open Source
 - Gateway
 - Deployment
-created: "2017-02-17"
-modified: "2017-02-17"
+created: "2017-02-18"
+modified: "2017-02-18"
 url: https://raw.githubusercontent.com/api-evangelist/deployment/gh-pages/_data/api-commons/apache-knox/apis.yaml
 specificationVersion: "0.14"
 apis: []
