--- a/_data/api-commons/apache-solr/apis.yaml
+++ b/_data/api-commons/apache-solr/apis.yaml
@@ -6,9 +6,10 @@ description: Solr is highly reliable, scalable and fault tolerant, providing dis
 image: http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/apache-solr-logo.png
 tags:
 - Search
+- Open Source
 - Deployment
-created: "2017-02-17"
-modified: "2017-02-17"
+created: "2017-02-18"
+modified: "2017-02-18"
 url: https://raw.githubusercontent.com/api-evangelist/deployment/gh-pages/_data/api-commons/apache-solr/apis.yaml
 specificationVersion: "0.14"
 apis: []
