--- a/_data/api-commons/aws-cloudformation/apis.yaml
+++ b/_data/api-commons/aws-cloudformation/apis.yaml
@@ -1,27 +1,27 @@
 name: AWS CloudFormation
 description: AWS CloudFormation gives developers and systems administrators an easy
   way to create and manage a collection of related AWS resources, provisioning and
-  updating them in an orderly and predictable fashion.nYou can use AWS CloudFormationu0026rsquo;su0026nbsp;sample
-  templatesu0026nbsp;or create your own templates to describe the AWS resources, and
-  any associated dependencies or runtime parameters, required to run your application.
-  You donu0026rsquo;t need to figure out the order for provisioning AWS services or
-  the subtleties of making those dependencies work. CloudFormation takes care of this
-  for you. After the AWS resources are deployed, you can modify and update them in
-  a controlled and predictable way, in effect applying version control to your AWS
-  infrastructure the same way you do with your software. You can also visualize your
-  templates as diagrams and edit them using a drag-and-drop interface with theu0026nbsp;AWS
-  CloudFormation Designer.nYou can deploy and update a template and its associated
-  collection of resources (called a stack) by using the AWS Management Console, AWS
-  Command Line Interface, or APIs. CloudFormation is available at no additional charge,
-  and you pay only for the AWS resources needed to run your applications.
+  updating them in an orderly and predictable fashion.nYou can use AWS CloudFormationsu00a0sample
+  templatesu00a0or create your own templates to describe the AWS resources, and any
+  associated dependencies or runtime parameters, required to run your application.
+  You do not need to figure out the order for provisioning AWS services or the subtleties
+  of making those dependencies work. CloudFormation takes care of this for you. After
+  the AWS resources are deployed, you can modify and update them in a controlled and
+  predictable way, in effect applying version control to your AWS infrastructure the
+  same way you do with your software. You can also visualize your templates as diagrams
+  and edit them using a drag-and-drop interface with theu00a0AWS CloudFormation Designer.nYou
+  can deploy and update a template and its associated collection of resources (called
+  a stack) by using the AWS Management Console, AWS Command Line Interface, or APIs.
+  CloudFormation is available at no additional charge, and you pay only for the AWS
+  resources needed to run your applications.
 image: http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/Management-Tools_AWSCloudFormation.png
 tags:
 - Management
 - Deployment
 - Cloud
 - Amazon Web Services
-created: "2017-02-17"
-modified: "2017-02-17"
+created: "2017-02-18"
+modified: "2017-02-18"
 url: https://raw.githubusercontent.com/api-evangelist/deployment/gh-pages/_data/api-commons/aws-cloudformation/apis.yaml
 specificationVersion: "0.14"
 apis: []
