--- a/_data/apis.yaml
+++ b/_data/apis.yaml
@@ -30,7 +30,7 @@ apis:
       - News
     properties:
       - type: x-openapi
-        url: http://deployment.apievangelist.com/apis/news/openapi.json
+        url: http://deployment.apievangelist.com/apis/curated/openapi.json
       - type: x-atom
         url: http://deployment.apievangelist.com/feeds/news/atom.xml
   - name: Organizations API
