--- a/_data/tools/index.yaml
+++ b/_data/tools/index.yaml
@@ -1150,8 +1150,8 @@
   github: ""
   image: http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/tools/RESTx.png
   tags: Framework,Java,Python,Deployment
-- slug: rest-layer
-  name: REST Layer
+- slug: ""
+  name: ""
   description: REST Layer is an API framework heavily inspired by the excellent Python
     Eve. It helps you create a comprehensive, customizable, and secure REST (graph)
     API on top of pluggable backend storages with no boiler plate code so you can
@@ -1327,4 +1327,17 @@
   github: https://github.com/NancyFx/Nancy
   image: https://s3.amazonaws.com/kinlane-productions/nancy/nancy-logo.png
   tags: Deployment,Framework,.NET
+- slug: apache-lucene
+  name: Apache Lucene
+  description: Apache LuceneTM is a high-performance, full-featured text search engine
+    library written entirely in Java. It is a technology suitable for nearly any application
+    that requires full-text search, especially cross-platform.
+  url: https://lucene.apache.org/core/
+  shorturl: ""
+  twitter: ""
+  blog: ""
+  blogrss: ""
+  github: ""
+  image: https://s3.amazonaws.com/kinlane-productions/apache-lucene/lucene_logo_green_300.png
+  tags: Deployment,Search
 ...
