--- a/_data/sponsors/index.yaml
+++ b/_data/sponsors/index.yaml
@@ -11,7 +11,7 @@
   banner_url: >-
     https://s3.amazonaws.com/kinlane-productions/api-service-providers/3Scale/empowered-by-3scale.png
   tags: 'API Evangelist,Definitions'
-- view_sort: B
+- view_sort: C
   name: Runscope
   identifier: runscope
   url: 'http://apis.how/8nlsropidv'
@@ -36,20 +36,7 @@
   banner_url: >-
     https://s3.amazonaws.com/kinlane-productions/api-evangelist/restlet/supported-by-restlet.png
   tags: 'API Evangelist,Definitions'
-- view_sort: C
-  name: Dreamfactory
-  identifier: dreamfactory
-  url: 'http://apis.how/bgdteovduo'
-  description: >-
-    DreamFactory Software develops and markets a technology that enables
-    developers to connect modern mobile applications to enterprise back-end
-    infrastructure in the cloud.
-  image: 'https://s3.amazonaws.com/kinlane-productions/partners/dreamfactory-logo.png'
-  type: Sponsor
-  banner_url: >-
-    https://s3.amazonaws.com/kinlane-productions/api-evangelist/dreamfactory/dreamfactory-banner-turn-any-database-into-api.png
-  tags: 'API Evangelist,Definitions'
-- view_sort: A
+- view_sort: D
   name: Tyk
   identifier: tyk
   url: 'http://apis.how/zflfesymzk'
@@ -59,5 +46,5 @@
     developer portal and API Management Dashboard.
   image: 'https://s3.amazonaws.com/kinlane-productions/partners/tyk-logo.png'
   type: Sponsor
-  banner_url: 'https://s3.amazonaws.com/kinlane-productions/partners/tyk-banner.png'
+  banner_url: 'https://s3.amazonaws.com/kinlane-productions/tyk/tyk_banner_motion-468x60.gif'
   tags: 'API Evangelist,Definitions'
