--- a/_data/organization_content/index.yaml
+++ b/_data/organization_content/index.yaml
@@ -1,4 +1,4 @@
-- title: API Design Organizations
+- title: API Deployment Organizations
   image: 'https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-organization.jpg'
   header: >-
     These are the organizations I come across in my research who are doing
