--- a/_data/building_blocks/index.yaml
+++ b/_data/building_blocks/index.yaml
@@ -1,147 +1,165 @@
-- building_block_id: database
-  type: Deployment
-  category: Data
-  name: Database
-  description: >-
-    Connecting to a database and generating a CRUD, or create, read, update and
-    delete API on an existing data source.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-database.png
-  tags: Deployment
-- building_block_id: comma-separate-file-csv
-  type: Deployment
-  category: Data
-  name: Comma Separate File (CSV)
-  description: >-
-    Deploying an API from comma separated files, providing a simple, delimited,
-    structured data store as a file rather than database.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-csv.png
-  tags: Deployment
-- building_block_id: spreadsheet
-  type: Deployment
-  category: Data
-  name: Spreadsheet
-  description: >-
-    The deployment of an API from a web-based, or uploaded spreadsheet,
-    transforming the column, and data into a web API.
-  image: ''
-  tags: Deployment
-- building_block_id: javascript-object-notation-json
-  type: Deployment
-  category: Data
-  name: JavaScript Object Notation (JSON)
-  description: >-
-    Deploying an API from JSON file, providing a simple, delimited, structured
-    data store as a file rather than database.
-  image: ''
-  tags: Deployment
-- building_block_id: framework
-  type: Deployment
-  category: Code
-  name: Framework
-  description: >-
-    Crafting and API using an existing API framework in a particular programming
-    language, providing the HTTP scaffolding needed.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-ladder.png
-  tags: Deployment
+- building_block_id: web-concepts
+  type: Definitions
+  category: Formats
+  name: Web Concepts
+  descripion: >-
+    APIs are built on the web, and there are numerous web concepts in play that
+    should be considered as part of the API design process.
+  logo: ''
+  tags: Definitions
+- building_block_id: specification
+  type: Definitions
+  category: Formats
+  name: Specification
+  descripion: >-
+    The root specification for the API definition format, providing a base set
+    of rules for all services and tools that employ the spec.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-schema.png
+  tags: Definitions
+- building_block_id: schema
+  type: Definitions
+  category: Formats
+  name: Schema
+  descripion: >-
+    A representation of data model, used as part of an API request, or response,
+    usually in JSON, but increasingly YAML, and Markdown are also used.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-schema.png
+  tags: Definitions
+- building_block_id: generator
+  type: Definitions
+  category: Tooling
+  name: Generator
+  descripion: >-
+    Generating an API definition format from an existing system or platform,
+    outputting the portable machine readable format.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-generate.png
+  tags: Definitions
+- building_block_id: parser
+  type: Definitions
+  category: Tooling
+  name: Parser
+  descripion: >-
+    Parses a machine readable API definition and makes ready for use in specific
+    language, structure, or platform.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-parse.png
+  tags: Definitions
+- building_block_id: validator
+  type: Definitions
+  category: Tooling
+  name: Validator
+  descripion: >-
+    Validates an API definition against its formal specification and schema,
+    producing a valid or invalid response, with as much detail as possible.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-valid.png
+  tags: Definitions
+- building_block_id: converter
+  type: Definitions
+  category: Tooling
+  name: Converter
+  descripion: >-
+    The conversion of an API definition from one format into another, allowing
+    designers to share API definitions in any format.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-conversion.png
+  tags: Definitions
+- building_block_id: commandline
+  type: Definitions
+  category: Tooling
+  name: Command-Line
+  descripion: The usage of machine readable API definitions at the command line.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-command-line.png
+  tags: Definitions
+- building_block_id: powershell
+  type: Definitions
+  category: Tooling
+  name: Powershell
+  descripion: The usage of machine readable API definitions via the powershell interface.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-command-line.png
+  tags: Definitions
+- building_block_id: aggregator
+  type: Definitions
+  category: Tooling
+  name: Aggregator
+  descripion: Aggregation of APIs using a machine readable API definition format.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-arrow-aggregate.png
+  tags: Definitions
+- building_block_id: translator
+  type: Definitions
+  category: Tooling
+  name: Translator
+  descripion: >-
+    Being able to translate an API definition format from one format to another,
+    either manually or automatically.
+  logo: ''
+  tags: Definitions
+- building_block_id: merging
+  type: Definitions
+  category: Tooling
+  name: Merging
+  descripion: >-
+    Tooling or other APIs that provide for the merging of common API definition
+    formats, allowing the granularity of what elements get merged, or do not get
+    merged. Ideally, this is an API, as well as simple web-based or desktop
+    tooling for API providers and consumers.
+  logo: ''
+  tags: Definitions
+- building_block_id: diff
+  type: Definitions
+  category: Tooling
+  name: Diff
+  descripion: >-
+    Providing side by side comparison of two API definitions, programmatically
+    and visually helping identify between two API definitions. This allows for
+    API architects, designers, and consumers to understand the completeness of
+    two definitions, in relation to each other.
+  logo: ''
+  tags: Definitions
+- building_block_id: editors
+  type: Definitions
+  category: Environment
+  name: Editors
+  descripion: >-
+    API definition editor, allowing for the creation, import, and export of API
+    definition formats, providing a simple, IDE like API editing experience.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-editor.png
+  tags: Definitions
+- building_block_id: ide-plugin
+  type: Definitions
+  category: Environment
+  name: IDE Plugin
+  descripion: >-
+    Providing integration with existing integrated development environments
+    (IDE), giving developers API discovery, documentation, and integration
+    tooling within the IDE.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-editor.png
+  tags: Definitions
+- building_block_id: forms
+  type: Definitions
+  category: Environment
+  name: Forms
+  descripion: >-
+    Dynamically generating an HTML form from an API definition, allow for the
+    structure, and handling to be driven by an API definition.
+  logo: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-forms.png
+  tags: Definitions
 - building_block_id: github
-  type: Deployment
-  category: Code
-  name: Github
-  description: >-
-    Provides a simple way to publish documentation, code libraries, TOS, and
-    other common building blocks in support of API operations.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-github.jpg
-  tags: Deployment
-- building_block_id: serverless
-  type: Deployment
-  category: Code
-  name: Serverless
-  description: >-
-    Deployment of individual code, in a variety of languages, using cloud
-    serverless technology like AWS Lambda or Iron.io.
-  image: ''
-  tags: Deployment
-- building_block_id: onpremise
-  type: Deployment
-  category: Backend
-  name: On-Premise
-  description: >-
-    The deployment of APIs is done on-premise within an organizational
-    controlled datacenter.
-  image: ''
-  tags: Deployment
-- building_block_id: cloud
-  type: Deployment
-  category: Backend
-  name: Cloud
-  description: >-
-    Deployment of APis are done using cloud providers, where hosting is included
-    with other services.
-  image: ''
-  tags: Deployment
-- building_block_id: hosting
-  type: Deployment
-  category: Backend
-  name: Hosting
-  description: >-
-    Hosting is all about where you are going to park your API. Usual deployments
-    are on-premise within your company or data center, in a public cloud like
-    Amazon Web Services or a hybrid of the two.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-hosting
-  tags: Deployment
-- building_block_id: gateway
-  type: Deployment
-  category: Connection
-  name: Gateway
-  description: >-
-    API gateways provide a solution for tapping into internal systems and
-    connecting with external platforms, to expose APIs.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-proxy-left.png
-  tags: Deployment
-- building_block_id: proxy
-  type: Deployment
-  category: Connection
-  name: Proxy
-  description: >-
-    API proxy are common place for taking an existing API interface, running it
-    through an intermediary which allows for translations, transformations and
-    other added services on top of API.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-proxy.png
-  tags: Deployment
-- building_block_id: connector
-  type: Deployment
-  category: Connection
-  name: Connector
-  description: >-
-    Contrary to an API proxy, there are API solutions that are proxyless, while
-    just allowing an API to connect or plugin to the advanced API resources
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-connector
-  tags: Deployment
-- building_block_id: real-time
-  type: Deployment
-  category: Other
-  name: Real Time
-  description: >-
-    Providing a way to deploy APIs that are real time, either directly from
-    sources, or on top of existing APIs.
-  image: ''
-  tags: Deployment
-- building_block_id: scraping
-  type: Deployment
-  category: Other
-  name: Scraping
-  description: >-
-    Harvesting or scraping of data from an existing website, content or data
-    source, when an existing data source is unavailable, and then publishing as
-    an API.
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-scraper.jpg
-  tags: Deployment
+  type: Definitions
+  category: Environment
+  name: GIthub
+  descripion: >-
+    Allowing for the import, publishing, and syncing of API definitions and
+    schemas to Github for forking, and management using the social coding
+    platform.
+  logo: ''
+  tags: Definitions
